add carla and refactor a bit: fix sass lint issue

--- a/assets/stylesheets/landing-page/base/titles.scss
+++ b/assets/stylesheets/landing-page/base/titles.scss
@@ -1,7 +1,8 @@
 /* Titles
    ========================================================================== */
 h1,
-footer {
+h2,
+h3 {
   font-weight: 300;
 }
 
