--- a/views/pages/docs.pug
+++ b/views/pages/docs.pug
@@ -28,7 +28,7 @@ block content
       p
         | For Extended EOS set:
         a(href='https://cdn.jsdelivr.net/npm/eos-icons/dist/extended/css/eos-icons-extended.css', target='_blank')  https://cdn.jsdelivr.net/npm/eos-icons/dist/extended/css/eos-icons-extended.css
-      p.command &ltlink rel="stylesheet" href="ttps://cdn.jsdelivr.net/npm/eos-icons/dist/extended/css/eos-icons-extended.css"&gt
+      p.command &ltlink rel="stylesheet" href="https://cdn.jsdelivr.net/npm/eos-icons/dist/extended/css/eos-icons-extended.css"&gt
       p
       p.d-inline  import them in your
       p.command &lt;head&gt;
