--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -10,14 +10,14 @@ block content
     // Open source DNA -------------------------------------------------------------------------------
     .container.text-centre
       .row.mx-auto
-        h1.display-4.d-inline-block.pr-lg-5.pt-lg-5.pb-lg-5.pl-lg-5
+        h1.display-4.d-inline-block.pr-lg-5.pt-5.pb-5.pl-5
           | OPEN
           br
           | SOURCE
           br
           | DNA
-        .fixed-rectangle-inverse.rounded.mt-lg-5.ml-lg-5.mr-lg-5
-        .col.py-3.px-lg-5.pt-lg-5
+        .fixed-rectangle-inverse.rounded.mt-5.ml-5.mr-5
+        .col.py-3.px-5.pt-5
           p
             | EOS icons offers an easily customizable icons for any company or 
             | project to use. We've created guides that are adjustable and applicable to any open source project.
@@ -36,7 +36,7 @@ block content
         .row
           .col-lg-6
             img.animated-image.img-fluid(src='assets/images/landing/monitor.png')
-            .animated-icons.mt-lg-5.pt-lg-5.ml-lg-4
+            .animated-icons.mt-xl-5.pt-xl-5.ml-xl-5.pl-xl-3.mt-lg-5.pt-lg-3.ml-lg-3.pl-lg-2.mt-md-5.pt-md-5.ml-md-5.pl-md-5.ml-sm-5.mt-sm-5
               .icons-item(data-name='loading')
                 i.eos-icons.eos-icon-loading
                 br
@@ -110,11 +110,11 @@ block content
               button.btn.btn-outline-light.ml-5.mt-1(data-toggle='modal', data-target='#exampleModalCenter') Request new icons
       // Checkout EOS DS --------------------------------------------------------------------------------
       .container-fluid.top-gradient.text-white.plane-container
-        .d-inline-block.text-left.mt-sm-4.pt-3.left-padding
+        .d-inline-block.text-left.mt-sm-4.pt-3.left-padding.plane-index
           h1 Try EOS Icons with EOS Design System
           p We are a part of EOS Design system and together we work like a charm
-        .d-inline-block.text-center
-          a.btn.btn-outline-light.ml-lg-5.mb-lg-5.mt-sm-3(href='https://www.eosdesignsystem.com/', target='_blank') Check out EOS DS
+        .d-inline-block.text-center.plane-index
+          a.btn.btn-outline-light.ml-5.mb-5(href='https://www.eosdesignsystem.com/', target='_blank') Check out EOS DS
         .d-inline-block.ml-5
           img.d-inline-block.plane-img(src='assets/images/landing/plane.png')
       // Contributors section ---------------------------------------------------------------------------
