disabled user input in copy code snippet

--- a/views/pages/cheatsheet.pug
+++ b/views/pages/cheatsheet.pug
@@ -53,7 +53,7 @@ block content
         small#close-code-snippet.close-code-snippet.pull-right.mr-5 X Close
       .row
         .col-10
-          input#copy3.how-to-use-code.curved.p-2
+          input#copy3.how-to-use-code.curved.p-2(readonly='readonly')
         .col-2
           a#copy1.btn.btn-lg.btn-dark.text-white.ml-5.pl-4.pr-4.pt-2.pb-2 Copy
   .how-to-use-animated.bg-jumbotron.forward-index
@@ -63,7 +63,7 @@ block content
         small#close-code-snippet-animated.close-code-snippet.pull-right.mr-5 X Close
       .row
         .col-10
-          input#copy4.how-to-use-code.curved.p-2
+          input#copy4.how-to-use-code.curved.p-2(readonly='readonly')
         .col-2
           a#copy2.btn.btn-lg.btn-dark.text-white.ml-5.pl-4.pr-4.pt-2.pb-2 Copy
   // Icons Request ------------------------------------------------------------------------------------------------
