--- a/assets/stylesheets/landing-page/components/how-to-use.scss
+++ b/assets/stylesheets/landing-page/components/how-to-use.scss
@@ -15,6 +15,10 @@
 .curved {
   border-radius: 30px 30px 30px 30px;
   border-width: 1.39px;
+
+  &:focus {
+    outline: none;
+  }
 }
 
 .how-to-use-code {
