--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -149,6 +149,9 @@ block content
           a(title='Carla Moratillo on Dribbble', href='https://dribbble.com/Carla_Isela', target='_blank')
             img.contributors-img(src='assets/images/landing/carla.jpg')
             p.text-decoration-none.text-dark Carla Moratillo
+          a(title='Saurabh Sharma on Twitter', href='https://twitter.com/SAURABH20944279?s=09', target='_blank')
+            img.contributors-img(src='assets/images/landing/saurabh.jpg')
+            p.text-decoration-none.text-dark Saurabh Sharma
           
   // Modal
   #exampleModalCenter.modal.fade(tabindex='-1', role='dialog', aria-labelledby='exampleModalCenter', aria-hidden='true')
