add Katia to the contributors page

--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -152,6 +152,9 @@ block content
           a(title='Saurabh Sharma on Twitter', href='https://twitter.com/SAURABH20944279?s=09', target='_blank')
             img.contributors-img(src='assets/images/landing/saurabh.jpg')
             p.text-decoration-none.text-dark Saurabh Sharma
+          a(title='Kateryna Marchak on Twitter', href='https://twitter.com/ZenZippy', target='_blank')
+            img.contributors-img(src='assets/images/landing/kathie.png')
+            p.text-decoration-none.text-dark Kateryna Marchak
           
   // Modal
   #exampleModalCenter.modal.fade(tabindex='-1', role='dialog', aria-labelledby='exampleModalCenter', aria-hidden='true')
