--- a/views/shared/layout/footer.pug
+++ b/views/shared/layout/footer.pug
@@ -26,9 +26,9 @@ section#js-contact.bottom-links.text-center.text-white
         p.min-height
           | Do you want to fork EOS-Icons, contribute, or report an issue?
         .btn-group-footer
-          a.btn.btn-outline-light(href='https://gitlab.com/SUSE-UIUX/eos-icons-landing', target='_blank')
+          a.btn.btn-outline-light(href='https://gitlab.com/SUSE-UIUX/eos-icons', target='_blank')
             | Repository
-          a.btn.btn-outline-light(href='https://gitlab.com/SUSE-UIUX/eos-icons-landing/issues', target='_blank')
+          a.btn.btn-outline-light(href='https://gitlab.com/SUSE-UIUX/eos-icons/issues', target='_blank')
             | Issues
       .col-sm-6.col-lg-3
         h4
