replace forum for slack since we arent using the forum at all

--- a/views/shared/layout/footer.pug
+++ b/views/shared/layout/footer.pug
@@ -14,11 +14,11 @@ section#js-contact.bottom-links.text-center.text-white
       .col-sm-6.col-lg-3
         h4
           img.bottom-links-icon(src='./assets/images/landing/forum.svg')
-          | Mailing list
+          | Chat on Slack
         p.min-height
-          | Join our mailing list to receive more information.
-        a.btn.btn-outline-light(href='https://groups.google.com/forum/#!forum/eos-design-system', target='_blank')
-          | Subscribe
+          | Ask us questions, give us ideas, propose ideas. Let's chat!
+        a.btn.btn-outline-light(href='https://slack.eosdesignsystem.com/', target='_blank')
+          | Join Slack channel
       .col-sm-6.col-lg-3
         h4
           img.bottom-links-icon(src='./assets/images/landing/gitlab-min.svg')
