New: Refactor of the code, added tags for icons and filter by tags functionality

--- a/assets/stylesheets/landing-page/layout/variables/template.scss
+++ b/assets/stylesheets/landing-page/layout/variables/template.scss
@@ -2,3 +2,4 @@ $body-bg: $light-color;
 $body-text-color: $dark-gray;
 $body-font-family: $font-family;
 $body-font-size: 16px;
+$tags-badge-margin: 0 $xs;
