--- a/views/pages/cheatsheet.pug
+++ b/views/pages/cheatsheet.pug
@@ -56,6 +56,10 @@ block content
           input#copy3.how-to-use-code.curved.p-2(readonly='readonly')
         .col-2
           a#copy1.btn.btn-lg.btn-dark.text-white.ml-5.pl-4.pr-4.pt-2.pb-2 Copy
+      .row
+        b.ml-3
+          | Tags:
+        .tags
   .how-to-use-animated.bg-jumbotron.forward-index
     .container
       h2.ml-3
