--- a/views/pages/icons-picker.pug
+++ b/views/pages/icons-picker.pug
@@ -28,17 +28,16 @@ block content
     #icons-animated.pl-4.pr-4
       h3.pl-5.pr-4.pb-4.pt-3 Animated icons
       .icons-item(data-name='loading')
-        img.eos-icons(src="./vendors/images/animated-svg/loading.svg")
+        img.eos-icons(src='./vendors/images/animated-svg/loading.svg')
         br
         | loading
       .icons-item(data-name='installing')
         //- i#eos-icon-installing.eos-icons.eos-icon-installing.md-48
-        img.eos-icons(src="./vendors/images/animated-svg/installing.svg")
+        img.eos-icons(src='./vendors/images/animated-svg/installing.svg')
         br
         | installing
   #myModal.config-file-modal.modal.fade(role='dialog')
     .modal-dialog
-      // Modal content
       .modal-content
         .modal-header
           h5 Upload Config File
