--- a/views/pages/cheatsheet.pug
+++ b/views/pages/cheatsheet.pug
@@ -39,11 +39,11 @@ block content
     #icons-animated.pl-4.pr-4
       h3.pl-5.pr-4.pb-4.pt-3 Animated icons
       .icons-item(data-name='loading')
-        img(src="./vendors/images/animated-svg/loading.svg")
+        img(src='./vendors/images/animated-svg/loading.svg')
         .eos-icons(data-tags='loading, animated')
           | loading
       .icons-item(data-name='installing')
-        img(src="./vendors/images/animated-svg/installing.svg")
+        img(src='./vendors/images/animated-svg/installing.svg')
         .eos-icons(data-tags='installing, animated')
           .js-eos-icon-name
             | installing
