--- a/assets/stylesheets/landing-page/layout/footer.scss
+++ b/assets/stylesheets/landing-page/layout/footer.scss
@@ -5,6 +5,7 @@ footer {
   bottom: 0px;
   color: $footer-text-color;
   font-size: $footer-font-size;
-  position: fixed;
+  height: 75px;
+  position: sticky;
   width: 100%;
 }
