--- a/views/pages/icons-picker.pug
+++ b/views/pages/icons-picker.pug
@@ -25,17 +25,6 @@ block content
           i.eos-icons.js-eos-icons
           br
           .js-eos-icon-name
-    #icons-animated.pl-4.pr-4
-      h3.pl-5.pr-4.pb-4.pt-3 Animated icons
-      .icons-item(data-name='loading')
-        img.eos-icons(src='./vendors/images/animated-svg/loading.svg')
-        br
-        | loading
-      .icons-item(data-name='installing')
-        //- i#eos-icon-installing.eos-icons.eos-icon-installing.md-48
-        img.eos-icons(src='./vendors/images/animated-svg/installing.svg')
-        br
-        | installing
   #myModal.config-file-modal.modal.fade(role='dialog')
     .modal-dialog
       .modal-content
@@ -57,4 +46,4 @@ block content
       h6.deselect-all-icons(onclick='deselectAll()') Deselect all #[i.eos-icons clear]
       .generate-div
         h6.js-icons-count 0 icons selected.
-        button.btn.btn-default(type='submit', onclick='generate()') Generate font
+        button.btn.btn-dark(type='submit', onclick='generate()') Generate font
