--- a/views/pages/cheatsheet.pug
+++ b/views/pages/cheatsheet.pug
@@ -40,22 +40,28 @@ block content
       h3.pl-5.pr-4.pb-4.pt-3 Animated icons
       .icons-item.js-animated-icon-info(data-name='loading')
         img(src='./vendors/images/animated-svg/loading.svg', data-tags='loading, animated')
+          //- https://gitlab.com/SUSE-UIUX/eos-icons/raw/master/animated-svg/loading.svg?inline=false
         br
         | loading
       .icons-item.js-animated-icon-info(data-name='installing')
         img(src='./vendors/images/animated-svg/installing.svg', data-tags='installing, animated')
+        //- https://gitlab.com/SUSE-UIUX/eos-icons/raw/master/animated-svg/installing.svg?inline=false
         br
         | installing
   .how-to-use.bg-jumbotron.forward-index
     .container
       h2.ml-3
         | How to use it:
-        small#close-code-snippet.close-code-snippet.pull-right.mr-5 X Close
-      .row
-        .col-10
-          input#copy3.how-to-use-code.curved.p-2(readonly='readonly')
-        .col-2
-          #copy1.btn.btn-dark.text-white.ml-5.pl-4.pr-4.pt-2.pb-2 Copy
+        small#close-code-snippet.close-code-snippet.pull-right
+          i.eos-icons.md-18
+            | close
+      .input-group.mb-3
+        input#copy3.form-control.curved(readonly='readonly')
+        .input-group-append
+          button#copy1.btn.btn-dark.text-white.btn-outline-secondary(type='button')
+            i.eos-icons.md-18
+              | content_copy
+            |  Copy
       .row
         b.ml-3
           | Tags:
@@ -64,12 +70,16 @@ block content
     .container
       h2.ml-3
         | How to use it:
-        small#close-code-snippet-animated.close-code-snippet.pull-right.mr-5 X Close
-      .row
-        .col-10
-          input#copy4.how-to-use-code.curved.p-2(readonly='readonly')
-        .col-2
-          #copy2.btn.btn-dark.text-white.ml-5.pl-4.pr-4.pt-2.pb-2 Copy
+        small#close-code-snippet-animated.close-code-snippet.pull-right
+          i.eos-icons.md-18
+            | close
+      .input-group.mb-3
+        input#copy4.form-control.curved(readonly='readonly')
+        .input-group-append
+          button.btn.btn-dark.text-white.btn-outline-secondary(type='button')
+            i.eos-icons.md-18
+              | file_download
+            |  Download icon
   // Icons Request ------------------------------------------------------------------------------------------------
   .bottom-container.bg-jumbotron
     p  Didn't find what you were looking for?
