add selection in cheatsheet to make it clear which icon the user selected

--- a/assets/stylesheets/landing-page/components/icons-item.scss
+++ b/assets/stylesheets/landing-page/components/icons-item.scss
@@ -36,4 +36,8 @@
 .icons-item-selected i {
   background-color: $dark-gray;
   color: $icons-item-selected-color;
+
+  > img {
+    fill: white;
+  }
 }
