--- a/views/pages/cheatsheet.pug
+++ b/views/pages/cheatsheet.pug
@@ -21,7 +21,7 @@ block content
           small.download-icons-text
             | download-EOS-icons-set
       #icons.js-icons-list.pl-4.pr-4.pt-5
-        .icons-item.js-icons-item(data-name='action_chains')
+        .icons-item.js-icons-item.icons-item-static-icons(data-name='action_chains')
           i.eos-icons.js-eos-icons
           br
           .js-eos-icon-name
