Add selected status to animated icons too

--- a/assets/stylesheets/landing-page/components/icons-item.scss
+++ b/assets/stylesheets/landing-page/components/icons-item.scss
@@ -33,11 +33,15 @@
   }
 }
 
-.icons-item-selected i {
-  background-color: $dark-gray;
-  color: $icons-item-selected-color;
+.icons-item-selected {
+
+  i {
+    background-color: $dark-gray;
+    color: $icons-item-selected-color;
+  }
 
   > img {
-    fill: white;
+    border: 1px solid gray;
+    border-radius: $icons-item-border-radius;
   }
 }
