Update link to eos icons

--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -88,7 +88,7 @@ block content
               | foundations that address design from both a broad
               | and detailed perspective.
             br
-            a.btn.btn-dark(href='/cheatsheet.html') Check out Extended EOS Icons
+            a.btn.btn-dark(href='/cheatsheet.html') Check out EOS Icons
       // Cheatsheet and new icons request ---------------------------------------------------------------
       .container-fluid
         .row
