--- a/views/pages/icons-picker.pug
+++ b/views/pages/icons-picker.pug
@@ -3,7 +3,8 @@ extends ../layouts/icons-picker-layout
 block content
   // loading animation
   .icons-picker-loading
-    img(src='./vendors/images/animated-svg/loading.svg')
+    .loading-icon
+      img(src='./vendors/images/animated-svg/loading.svg')
       p Generating font files...
 
   // header ----------------------------------------------------------------------------------------
