Added logo in title bar

--- a/views/layouts/default.pug
+++ b/views/layouts/default.pug
@@ -10,6 +10,7 @@ html
     meta(property='og:image', content='https://res.cloudinary.com/eosdesignsystem/image/upload/v1550833469/EOS/Social/eos-design-system.jpg')
     link(rel='stylesheet', href='./vendors/css/vendors.min.css')
     link(rel='stylesheet', href='./assets/css/application.css')
+    link(rel='icon', href='./assets/images/landing/favicon.png', type='image/png')
     script(src='./vendors/js/vendors.min.js')
     script(src='./assets/js/application.min.js')
   body
