--- a/assets/stylesheets/landing-page/base/pages/variables/landing.scss
+++ b/assets/stylesheets/landing-page/base/pages/variables/landing.scss
@@ -3,6 +3,8 @@ $nav-item-font-size: 2rem;
 $nav-top-gradient: linear-gradient(90deg, #FBB369, #FF814A);
 $header-background: url(../images/landing/header.png),
 linear-gradient(90deg, #FBB369, #FF814A);
+$small-header-background: url(../images/landing/header.png),
+linear-gradient(90deg, #694966, #5C415D);
 $footer-background: url(../images/landing/footer.png),
 linear-gradient(90deg, #66667A, #2F2F3B);
 $icon-item-hover-color: #fe673a;
