--- a/assets/stylesheets/landing-page/base/variables/colors.scss
+++ b/assets/stylesheets/landing-page/base/variables/colors.scss
@@ -11,6 +11,7 @@ $hyper-link-color: #0285c4;
 $hyper-link-hover-color: #15578f;
 $command: #c0341d;
 $codes: #505050;
+$nav-border-color: #E3864E;
 
 /* Gradient */
 
