--- a/assets/stylesheets/landing-page/layout/variables/header.scss
+++ b/assets/stylesheets/landing-page/layout/variables/header.scss
@@ -3,3 +3,7 @@ $header-gradient-initial: $grad-init;
 $header-gradient-middle: $grad-middle;
 $header-gradient-final: $grad-final;
 $header-version-font-size: 12px;
+$small-header-height: 316px;
+$header-height: 500px;
+$small-content-padding: 10rem;
+$content-padding: 15rem;
