--- a/assets/stylesheets/landing-page/layout/variables/template.scss
+++ b/assets/stylesheets/landing-page/layout/variables/template.scss
@@ -2,4 +2,6 @@ $body-bg: $light-color;
 $body-text-color: $dark-gray;
 $body-font-family: $font-family;
 $body-font-size: 16px;
+$nav-border-width: 1px;
 $tags-badge-margin: 0 $xs;
+$nav-border-width: 1px;
