--- a/views/pages/cheatsheet.pug
+++ b/views/pages/cheatsheet.pug
@@ -2,10 +2,10 @@ extends ../layouts/default
 
 block content
   // header ----------------------------------------------------------------------------------------
-  .header
-    .content.container.text-white.img-fluid(alt='img-responsive')
+  .small-header
+    .small-content.container.text-white.img-fluid(alt='img-responsive')
       h2
-        | Free. Open source. Vector and pixel-perfect icons. The iconic font your product needs.
+        | Cheatsheet: find the ligature of the icon you are looking for, plus, get an overview of all the available icons.
   // -----------------------------------------------------------------------------------------------
   ul#myTab.nav.nav-tabs.bg-jumbotron.pl-3.pr-3(role='tablist')
     li.nav-item
