--- a/views/pages/docs.pug
+++ b/views/pages/docs.pug
@@ -2,11 +2,11 @@ extends ../layouts/default
 
 block content
   // header ----------------------------------------------------------------------------------------
-  .header.mb-lg-2
-    .content.container.text-white.img-fluid(alt='img-responsive')
-      h2
-        | Free. Open source. Vector and pixel-perfect icons. The iconic font your product needs.
-  .container
+  //- .small-header.mb-lg-2
+  //-   .small-content.container.text-white.img-fluid(alt='img-responsive')
+  //-     h2
+  //-       | Free. Open source. Vector and pixel-perfect icons. The iconic font your product needs.
+  .container.mt-5
     section.mb-5.mt-5
       h2.font-weight-bold.mb-3.border-bottom
         | Installing EOS icons
