--- a/views/pages/icons-picker.pug
+++ b/views/pages/icons-picker.pug
@@ -8,8 +8,8 @@ block content
       p Generating font files...
 
   // header ----------------------------------------------------------------------------------------
-  .header
-    .content.icons-container.text-white.img-fluid(alt='img-responsive')
+  .small-header
+    .small-content.icons-container.text-white.img-fluid(alt='img-responsive')
       h2
         | Click on Icons to select them
       p To continue building an old font, upload #[i icons-config.json] 
