--- a/views/shared/layout/header.pug
+++ b/views/shared/layout/header.pug
@@ -1,5 +1,5 @@
 // ---- Navbar ----------------------------------------------------------------------------------
-nav.navbar.navbar-expand-lg.top-gradient.navbar-dark.border.fixed-top.forward-index
+nav.navbar.navbar-expand-lg.top-gradient.navbar-dark.nav-border.fixed-top.forward-index
   .navbar-brand(href='#')
     img.d-inline-block.align-top.mt-lg-2(src='assets/images/landing/logo.png', width='86', height='35', alt='')
   a.navbar-brand(href='/') EOS Icons
