restructure assets to follow consistent structure

--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -2,5 +2,4 @@
 @import 'layout/index';
 @import 'elements/index';
 @import 'components/index';
-@import 'landing';
-@import 'thankyouPage';
+@import 'pages/index';
