New: Add GTM to Icons page

--- a/views/layouts/default.pug
+++ b/views/layouts/default.pug
@@ -14,6 +14,7 @@ html
     script(src='./vendors/js/vendors.min.js')
     script(src='./assets/js/application.min.js')
   body
+    include ../shared/gtm-body.pug
     include ../shared/layout/header.pug
     block content
     include ../shared/layout/footer.pug
