Added cookies-policy page

--- a/views/shared/layout/header.pug
+++ b/views/shared/layout/header.pug
@@ -15,3 +15,5 @@ nav.navbar.navbar-expand-lg.top-gradient.navbar-dark.nav-border.fixed-top.forwar
         a.nav-link.current(href='icons-picker.html') Customize it
       li.nav-item
         a.nav-link.current(href='docs.html') Docs
+      li.nav-item
+        a.nav-link.current(href='cookies-policy.html') Docs
