temporary enable cookies banner

--- a/assets/stylesheets/components/cookies-banner.scss
+++ b/assets/stylesheets/components/cookies-banner.scss
@@ -5,7 +5,7 @@
   background: $eos-cookies-banner-background;
   bottom: 0;
   box-shadow: $eos-cookies-banner-boxshadow;
-  display: none;
+  /*display: none;*/
   flex-direction: row;
   margin: 0;
   padding: 0 50px;
