--- a/assets/stylesheets/pages/variables/cookies-policy.scss
+++ b/assets/stylesheets/pages/variables/cookies-policy.scss
@@ -1,11 +1,11 @@
 $eos-slider-background: $light-gray;
 $eos-slider-before-color: $light-color;
 $eos-slider-input-checked-color: $primary-light;
-$eos-slider-input-disabled-color: $dark-gray;
+$eos-slider-input-disabled-color: $light-gray;
 $eos-cookies-table-title-background: $lightest-gray;
 $eos-cookies-preference-margin: $s;
 $eos-cookies-preference-switch-margin: $s $m;
-$eos-cookies-preference-switch-height: xl;
+$eos-cookies-preference-switch-height: $xl;
 $eos-cookies-preference-switch-width: $xxxl - 4;
 $eos-slider-before-bottom-left: $xs;
 $eos-slider-before-height-width: $l + 2;
