New: Modify cookies policy text fixes

--- a/views/pages/cookies-policy.pug
+++ b/views/pages/cookies-policy.pug
@@ -18,11 +18,11 @@ block content
       h4
         | Cookie preferences
       p
-        | Some essential features on our sites just won’t work without cookies. And having other cookies switched off can seriously affect the way you’ll be able to enjoy our services.
+        | Some essential features on our sites just won't work without cookies. And having other cookies switched off can seriously affect the way you'll be able to enjoy our services.
       p
-        | Please check your cookie settings below and turn on any cookies you’re happy with.
+        | Please check your cookie settings below and turn on any cookies you're happy with.
       p
-        | “Strictly necessary” cookies can’t be turned off. But "Analytics / Performance" cookies can be turned on or off below. You can learn more about cookies and what they do in the link below.
+        | "Strictly necessary" cookies can't be turned off. But "Analytics / Performance" cookies can be turned on or off below. You can learn more about cookies and what they do in the link below.
 
       .cookies-preference-wrap
         .cookie-preference-item
