--- a/views/layouts/icons-picker-layout.pug
+++ b/views/layouts/icons-picker-layout.pug
@@ -12,6 +12,9 @@ html
     link(rel='stylesheet', href='./assets/css/application.css')
     script(src='./vendors/js/vendors.min.js')
     script(src='./assets/js/application.min.js')
+    script(src='https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js')
   body
+    include ../shared/gtm-body.pug
     include ../shared/layout/header.pug
     block content
+    include ../shared/cookies-banner.pug
